<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/balance_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/balance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance_text"
                android:textStyle="bold"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textSize="24sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inflow_categories_text"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="22sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cash_inflow_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/add_inflow_category_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_category_button_text"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outflow_categories_text"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="22sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cash_outflow_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/add_outflow_category_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_category_button_text"
            android:layout_marginTop="15dp"/>

    </LinearLayout>
</ScrollView>